# doujinshi-dl-nhentai

./: .gitignore  CLAUDE.md  README.rst  pyproject.toml
doujinshi_dl_nhentai/: __init__.py  adapters.py  constant.py  http.py  model.py  parser.py  plugin.py  serializer.py
tests/: test_download.py  test_login.py  test_parser.py
