[tool.poetry]
name = "doujinshi-dl-nhentai"
version = "1.0.2"
description = "nhentai plugin for doujinshi-dl (https://github.com/RicterZ/doujinshi-dl)"
authors = ["Ricter Z <ricterzheng@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/RicterZ/doujinshi-dl-nhentai"
repository = "https://github.com/RicterZ/doujinshi-dl-nhentai"

[tool.poetry.dependencies]
python = "^3.8"
doujinshi-dl = ">=2.0.0"
requests = ">=2.28"
beautifulsoup4 = ">=4.11"
tabulate = ">=0.9"
iso8601 = ">=1.0"
httpx = ">=0.23"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."doujinshi_dl.plugins"]
nhentai = "doujinshi_dl_nhentai:plugin"
